tests/fail/lambda_overuse.is
let diagonal
	: Box Bool -> Box Bool & Box Bool
	= |x| (x, x);

diagonal (box true)
